# orldcup-green-oracle

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  render.yaml
app/: __init__.py  config.py  i18n.py  logging_utils.py  main.py  repository.py  schemas.py  time_utils.py
app/data/: catalog.py
app/services/: __init__.py  fallback.py  green_oracle_engine.py  llm_client.py  prediction_service.py  prompt_builder.py  rate_limit.py  schedule_provider.py  schedule_service.py  schedule_store.py
static/css/: site.css
static/js/: site.js
templates/: base.html  index.html
templates/partials/: prediction_result.html  result_placeholder.html
tests/: conftest.py  test_api.py  test_fallback.py  test_prediction_service.py  test_prompt_builder.py  test_provider.py  test_templates.py
worldcup2026-green-oracle/: SKILL.md
worldcup2026-green-oracle/agents/: openai.yaml
worldcup2026-green-oracle/data/: kimi_team_priors.json  ratings.json
worldcup2026-green-oracle/references/: kimi-methodology.md
worldcup2026-green-oracle/tools/: predict.py
worldcup2026-prediction-skill/: SKILL.md
