[project]
name = "worldcup2026-predictor"
version = "0.1.0"
description = "Bilingual football-broadcast-style World Cup 2026 match predictor."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.3,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "pydantic-settings>=2.14.1,<3.0.0",
  "python-multipart>=0.0.32,<1.0.0",
  "uvicorn>=0.49.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.4.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
